links section in progress

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,10 @@
   box-sizing: border-box;
   outline: none;
 }
+
+html {
+  background-color: #18191E;
+}
 /*
   2. Remove default margin
 */
@@ -23,6 +27,7 @@
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
 }
 /*
   5. Improve media defaults
