--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,7 +27,7 @@ html {
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 /*
   5. Improve media defaults
